--- a/frontendfiles/Guest-contribute.html
+++ b/frontendfiles/Guest-contribute.html
@@ -34,7 +34,7 @@
     <nav id="custom-content-navbar" class="navbar navbar-expand-lg navbar-expand-md navbar-dark container-fluid">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <h4>COVID Resource Monitor</h4>
+                <h4> <i class="fab fa-medrt"></i>COVID Resource Monitor</h4>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
