--- a/frontendfiles/login.html
+++ b/frontendfiles/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/login.css">
+    
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
@@ -18,7 +18,11 @@
     <!-- FontAwesome Icons CDN-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-
+    <!-- Navbar CSS -->
+    <link rel="stylesheet" href="css/navbar.css">
+    <!-- Custom CSS for page -->
+    <link rel="stylesheet" href="css/login.css">
+    
     <title>Login Page | COVID Resource Monitor</title>
 </head>
 
@@ -26,10 +30,10 @@
     <!-- Define the whole page in a container -->
 
     <!-- Login Page Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light" style="background-color: #ebebe9;">
+    <nav id="custom-content-navbar" class="navbar navbar-expand-lg navbar-expand-md navbar-dark container-fluid">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <h4>COVID Resource Monitor</h4>
+            <a class="navbar-brand py-2" href="#">
+                <h4><i class="fab fa-medrt"></i> COVID Resource Monitor</h4>
             </a>
         </div>
         </div>
