--- a/frontendfiles/admin-dashboard.html
+++ b/frontendfiles/admin-dashboard.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/admin-dashboard.css">
+    
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
@@ -16,6 +16,12 @@
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <!-- DataTable CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
+    <!-- Side bar css -->
+    <link rel="stylesheet" href="css/sidebar.css">
+    <!-- Navbar css -->
+    <link rel="stylesheet" href="css/navbar.css">
+    <!-- Custom CSS for page -->
+    <link rel="stylesheet" href="css/admin-dashboard.css">
 
     <!-- Page Title -->
     <title>Resources Dashboard | COVID Resource Monitor</title>
@@ -25,11 +31,10 @@
     <!-- Define the whole page in a container -->
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light container-fluid"
-        style="background-color: #ebebe9;">
+    <nav id="custom-content-navbar" class="navbar navbar-expand-lg navbar-expand-md navbar-dark container-fluid">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <h4>COVID Resource Monitor</h4>
+                <h4><i class="fab fa-medrt"></i> COVID Resource Monitor</h4>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,9 +42,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">
+                        <a class="nav-link active" aria-current="page" href="#">
                             <h5><i class="bi bi-node-plus"></i> Lead Management</h5>
                         </a>
                     </li>
@@ -48,10 +52,10 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="bi bi-person-circle"></i> User's Name
+                            <i class="bi bi-person-circle"></i> Guest User or Visitor
                         </a>
                         <ul class="dropdown-menu container" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Log In</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -73,7 +77,7 @@
 
                             <div class="row">
                                 <div class="col-lg-3 col-md-6 col-sm-12">
-                                    <div class="card border border-primary rounded">
+                                    <div class="card border border-success rounded">
                                         <a href="" data-bs-toggle="modal" data-bs-target="#exampleModalCategory">
                                             <div class="card-body ">
                                                 <i class="st fa fa-plus"></i> <br>Add<br> Category
@@ -82,11 +86,10 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-md-6 col-sm-12">
-                                    <div class="card border border-primary rounded">
+                                    <div class="card border border-success rounded">
                                         <a href="" data-bs-toggle="modal" data-bs-target="#exampleModalSubCategory">
                                             <div class="card-body py-3 pb-4 ">
                                                 <i class="nd bi bi-subtract"></i> <br>Add <br>Sub-Category
-
                                             </div>
                                         </a>
                                     </div>
