--- a/frontendfiles/admin-dashboard.html
+++ b/frontendfiles/admin-dashboard.html
@@ -79,8 +79,8 @@
                                 <div class="col-lg-3 col-md-6 col-sm-12">
                                     <div class="card border border-success rounded">
                                         <a href="" data-bs-toggle="modal" data-bs-target="#exampleModalCategory">
-                                            <div class="card-body ">
-                                                <i class="st fa fa-plus"></i> <br>Add<br> Category
+                                            <div class="card-body text-success ">
+                                                <i class="st fa fa-plus "></i> <br>Add<br> Category
                                             </div>
                                         </a>
                                     </div>
@@ -88,7 +88,7 @@
                                 <div class="col-lg-3 col-md-6 col-sm-12">
                                     <div class="card border border-success rounded">
                                         <a href="" data-bs-toggle="modal" data-bs-target="#exampleModalSubCategory">
-                                            <div class="card-body py-3 pb-4 ">
+                                            <div class="card-body text-success py-3 pb-4 ">
                                                 <i class="nd bi bi-subtract"></i> <br>Add <br>Sub-Category
                                             </div>
                                         </a>
