--- a/frontendfiles/admin-dashboard.html
+++ b/frontendfiles/admin-dashboard.html
@@ -52,10 +52,10 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="bi bi-person-circle"></i> Guest User or Visitor
+                            <i class="bi bi-person-circle"></i> User's Name
                         </a>
                         <ul class="dropdown-menu container" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Log In</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -77,19 +77,19 @@
 
                             <div class="row">
                                 <div class="col-lg-3 col-md-6 col-sm-12">
-                                    <div class="card border border-success rounded">
+                                    <div class="card border btn-outline-success rounded">
                                         <a href="" data-bs-toggle="modal" data-bs-target="#exampleModalCategory">
-                                            <div class="card-body text-success ">
-                                                <i class="st fa fa-plus "></i> <br>Add<br> Category
+                                            <div class="card-body my-1 btn-outline-success">
+                                                <i class="bi bi-plus-circle-fill"></i> <br>Add<br> Category
                                             </div>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-md-6 col-sm-12">
-                                    <div class="card border border-success rounded">
+                                    <div class="card border btn-outline-success rounded">
                                         <a href="" data-bs-toggle="modal" data-bs-target="#exampleModalSubCategory">
-                                            <div class="card-body text-success py-3 pb-4 ">
-                                                <i class="nd bi bi-subtract"></i> <br>Add <br>Sub-Category
+                                            <div class="card-body btn-outline-success py-3 pb-4 ">
+                                                <i class="bi bi-subtract"></i> <br>Add <br>Sub-Category
                                             </div>
                                         </a>
                                     </div>
