--- a/frontendfiles/team-add-modify.html
+++ b/frontendfiles/team-add-modify.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/team-add-modify.css">
+    
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
@@ -16,20 +16,25 @@
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <!-- DataTable CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
+    <!-- Side bar css -->
+    <link rel="stylesheet" href="css/sidebar.css">
+    <!-- Navbar css -->
+    <link rel="stylesheet" href="css/navbar.css">
+    <!-- Custom CSS for page -->
+    <link rel="stylesheet" href="css/team-add-modify.css">
 
     <!-- Page Title -->
-    <title>Resources Dashboard | COVID Resource Monitor</title>
+    <title>Add/Modify Resources | COVID Resource Monitor</title>
 </head>
 
 <body>
     <!-- Define the whole page in a container -->
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light container-fluid"
-        style="background-color: #ebebe9;">
+    <nav id="custom-content-navbar" class="navbar navbar-expand-lg navbar-expand-md navbar-dark container-fluid">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <h4>COVID Resource Monitor</h4>
+                <h4><i class="fab fa-medrt"></i> COVID Resource Monitor</h4>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +48,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">
+                        <a class="nav-link active" aria-current="page" href="#">
                             <h5><i class="bi bi-node-plus"></i> Add/Modify Leads</h5>
                         </a>
                     </li>
@@ -71,17 +76,17 @@
                 <div class="d-flex align-items-start sidebar-content">
                     <div class="nav flex-column nav-pills h5" id="v-pills-tab" role="tablist"
                         aria-orientation="vertical">
-                        <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill"
+                        <button class="nav-link active mt-3" id="v-pills-home-tab" data-bs-toggle="pill"
                             data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home"
                             aria-selected="true">
                             <i class="bi bi-plus-circle"></i> Add Leads
                         </button>
-                        <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill"
+                        <button class="nav-link mt-3" id="v-pills-profile-tab" data-bs-toggle="pill"
                             data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile"
                             aria-selected="false">
                             <i class="bi bi-gear"></i> Modify leads
                         </button>
-                        <button class="nav-link" id="v-pills-verify-tab" data-bs-toggle="pill"
+                        <button class="nav-link mt-3" id="v-pills-verify-tab" data-bs-toggle="pill"
                             data-bs-target="#v-pills-verify" type="button" role="tab" aria-controls="v-pills-verify"
                             aria-selected="false">
                             <i class="fa fa-check" aria-hidden="true"></i> Verify leads
@@ -89,6 +94,7 @@
                     </div>
                 </div>
             </div>
+            
             <div class="col-md-8 col-lg-8 col-sm-12">
                 <!-- Content Division -->
                 <div class="tab-content mb-5" id="v-pills-tabContent">
